fix: Overflow with leaflet map

--- a/Event_Tracker_App/Event.Tracker.Web/src/base.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/base.css
@@ -18,6 +18,7 @@ html{
   margin: 0;
 
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 #root {
